# plateforme_py

./: .gitignore  README.md  logs.json  main.py  pyproject.toml
forms_sender/: __init__.py  forms_sender.py  send_inscriptions.py
forms_sender/json_parser/: json_utils.py
forms_sender/pages_config/: init_bachelor.json
forms_sender/pages_objects/: candidatures_cursus_object.py  informations.py  init_bachelor.py
forms_sender/post_form/: sender.py
forms_sender/post_form/generate_form/custom_objects/: name.py  profile.py
forms_sender/post_form/generate_form/headers_generator/: headers.py
forms_sender/post_form/generate_form/headers_generator/pages_objects/: http_header.py
forms_sender/post_form/generate_form/headers_generator/pages_objects/candidatures/: candidatures_cursus.py  config.json
forms_sender/post_form/generate_form/headers_generator/pages_objects/informations/: config.json  informations.py
forms_sender/post_form/generate_form/json_parser/: json_utils.py
forms_sender/post_form/generate_form/pages_objects/: candidatures_cursus.py  informations.py  init_bachelor.py
forms_sender/post_form/generate_form/pages_objects/custom_objects/: profile.py
forms_sender/senders/candidatures_cursus/: send_candidatures.py
forms_sender/senders/informations/: send_informations.py
forms_sender/senders/names_generator/: names.py
forms_sender/settings/: config.json  config.py
settings/: __init__.py  check_config.py  config.json  config.py
settings/consts/: __init__.py  str_consts.py
(+2 files in other folders)
